[gd_scene load_steps=22 format=3 uid="uid://bdf8tguiht1e1"]

[ext_resource type="Script" uid="uid://cji1my425xuiw" path="res://Scenes/GUI/OptionsMenu/options_menu.gd" id="1_6s3l0"]
[ext_resource type="Texture2D" uid="uid://vq8whlhwxgrm" path="res://Assets/Images/optionsMenu.jpg" id="1_q7d6m"]
[ext_resource type="Texture2D" uid="uid://dr5tvgw5qu3y7" path="res://Assets/Images/GUI/Labels/optionsLabel.png" id="2_6s3l0"]
[ext_resource type="Texture2D" uid="uid://cxjdc8gwmic2v" path="res://Assets/Images/GUI/Button2/normalButton.png" id="3_aapos"]
[ext_resource type="Texture2D" uid="uid://c8xq1pjpvis2q" path="res://Assets/Images/GUI/Button2/pressedButton.png" id="4_ace60"]
[ext_resource type="Texture2D" uid="uid://br7lqqh6sk8fk" path="res://Assets/Images/GUI/Button2/hoverButton.png" id="5_tl3bd"]
[ext_resource type="FontFile" uid="uid://uuvlepr3a5y1" path="res://Assets/Fonts/NicerNightie.ttf" id="6_qgrql"]
[ext_resource type="Texture2D" uid="uid://dshkwv48tefsm" path="res://Assets/Images/GUI/Icons/eng (1).png" id="7_gtnfh"]
[ext_resource type="Texture2D" uid="uid://5de5q6bem5my" path="res://Assets/Images/GUI/Icons/es (1).png" id="8_mrorb"]
[ext_resource type="Texture2D" uid="uid://b8lylpsrqr3rt" path="res://Assets/Images/GUI/Icons/por (1).png" id="9_26qv5"]
[ext_resource type="Texture2D" uid="uid://uswt0uakdmgj" path="res://Assets/Images/GUI/Icons/fre (1).png" id="10_wb82j"]
[ext_resource type="Script" uid="uid://dyge85oqfh213" path="res://Scenes/GUI/OptionsMenu/brightness_slider.gd" id="12_aapos"]
[ext_resource type="Script" uid="uid://ggcidxpm1cdl" path="res://Scenes/GUI/OptionsMenu/options_button.gd" id="12_qgrql"]
[ext_resource type="Script" uid="uid://bcwx3hqkbna0r" path="res://Scenes/GUI/OptionsMenu/mouse_sensibility_slider.gd" id="13_ace60"]
[ext_resource type="Script" uid="uid://t1w38bytjvw5" path="res://Scenes/GUI/OptionsMenu/fontCheckGroup.gd" id="14_tl3bd"]

[sub_resource type="LabelSettings" id="LabelSettings_amxod"]
font = ExtResource("6_qgrql")
font_size = 26
font_color = Color(0.011764706, 0.011764706, 0, 1)
outline_size = 5
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3bcp2"]
font = ExtResource("6_qgrql")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 10
shadow_size = 32
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amxod"]
bg_color = Color(0.04916793, 0.08455034, 0.16463329, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.3077162, 0.3077162, 0.3077162, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="Theme" id="Theme_3bcp2"]
Button/styles/disabled = SubResource("StyleBoxFlat_amxod")
Button/styles/focus = SubResource("StyleBoxFlat_amxod")
Button/styles/hover = SubResource("StyleBoxFlat_amxod")
Button/styles/normal = SubResource("StyleBoxFlat_amxod")
PopupMenu/styles/hover = SubResource("StyleBoxFlat_amxod")
PopupMenu/styles/labeled_separator_left = SubResource("StyleBoxFlat_amxod")
PopupMenu/styles/labeled_separator_right = SubResource("StyleBoxFlat_amxod")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_amxod")
PopupMenu/styles/separator = SubResource("StyleBoxFlat_amxod")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bcp2"]
bg_color = Color(0.003921569, 0.003921569, 0.003921569, 0.65882355)
corner_detail = 1

[sub_resource type="Theme" id="Theme_lyspy"]
Label/styles/normal = SubResource("StyleBoxFlat_3bcp2")

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -8.0
offset_right = 11.069946
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6s3l0")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -670
layout_mode = 0
offset_left = -47.0
offset_right = 1936.0
offset_bottom = 1108.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="OptionsMenu" type="Sprite2D" parent="."]
position = Vector2(943.5, 545.5)
scale = Vector2(1.07, 1.07)
texture = ExtResource("1_q7d6m")

[node name="OptionsLabel" type="Sprite2D" parent="."]
position = Vector2(696, 184.00002)
scale = Vector2(1.07, 1.07)
texture = ExtResource("2_6s3l0")

[node name="backButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1162.5
offset_top = 673.5
offset_right = 1410.5035
offset_bottom = 757.8811
scale = Vector2(1.07, 1.07)
texture_normal = ExtResource("3_aapos")
texture_pressed = ExtResource("4_ace60")
texture_hover = ExtResource("5_tl3bd")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="backButton"]
layout_mode = 0
offset_left = 59.590927
offset_top = 30.763947
offset_right = 184.59093
offset_bottom = 57.763947
scale = Vector2(1.07, 1.07)
text = "Back to menu"
label_settings = SubResource("LabelSettings_amxod")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 650.5
offset_top = 548.5
offset_right = 827.5
offset_bottom = 599.5
scale = Vector2(1.07, 1.07)
text = "Font size"
label_settings = SubResource("LabelSettings_3bcp2")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 651.5
offset_top = 480.5
offset_right = 828.5
offset_bottom = 531.5
scale = Vector2(1.07, 1.07)
text = "Brightness"
label_settings = SubResource("LabelSettings_3bcp2")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 652.5
offset_top = 412.5
offset_right = 894.5
offset_bottom = 463.5
scale = Vector2(1.07, 1.07)
text = "Mouse sensibility"
label_settings = SubResource("LabelSettings_3bcp2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 653.5
offset_top = 344.5
offset_right = 830.5
offset_bottom = 395.5
scale = Vector2(1.07, 1.07)
text = "Language"
label_settings = SubResource("LabelSettings_3bcp2")

[node name="OptionsButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 981.5
offset_top = 336.5
offset_right = 1244.5
offset_bottom = 389.5
scale = Vector2(1.07, 1.07)
theme = SubResource("Theme_3bcp2")
selected = 0
item_count = 4
popup/item_0/text = "English"
popup/item_0/icon = ExtResource("7_gtnfh")
popup/item_0/id = 0
popup/item_1/text = "Spanish"
popup/item_1/icon = ExtResource("8_mrorb")
popup/item_1/id = 1
popup/item_2/text = "Portuguese"
popup/item_2/icon = ExtResource("9_26qv5")
popup/item_2/id = 2
popup/item_3/text = "French"
popup/item_3/icon = ExtResource("10_wb82j")
popup/item_3/id = 3
script = ExtResource("12_qgrql")

[node name="brightnessSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 986.5
offset_top = 483.5
offset_right = 1240.5
offset_bottom = 499.5
scale = Vector2(1.07, 1.07)
script = ExtResource("12_aapos")

[node name="Label" type="Label" parent="brightnessSlider"]
layout_mode = 0
offset_left = 112.0
offset_top = 12.0
offset_right = 152.0
offset_bottom = 35.0
scale = Vector2(1.07, 1.07)
theme = SubResource("Theme_lyspy")
text = "0"
horizontal_alignment = 1

[node name="mouseSensibilitySlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 984.5
offset_top = 414.5
offset_right = 1242.5
offset_bottom = 430.5
scale = Vector2(1.07, 1.07)
script = ExtResource("13_ace60")

[node name="Label" type="Label" parent="mouseSensibilitySlider"]
layout_mode = 0
offset_left = 114.0
offset_top = 12.0
offset_right = 154.0
offset_bottom = 35.0
scale = Vector2(1.07, 1.07)
theme = SubResource("Theme_lyspy")
text = "0"
horizontal_alignment = 1

[node name="fontCheckGroup" type="Node" parent="."]
script = ExtResource("14_tl3bd")

[node name="medium" type="CheckBox" parent="fontCheckGroup"]
offset_left = 1119.5
offset_top = 531.5
offset_right = 1163.5
offset_bottom = 555.5
scale = Vector2(1.07, 1.07)

[node name="Label" type="Label" parent="fontCheckGroup/medium"]
layout_mode = 0
offset_left = -21.0
offset_top = 24.0
offset_right = 47.0
offset_bottom = 49.0
scale = Vector2(1.07, 1.07)
theme = SubResource("Theme_lyspy")
text = "Medium"
horizontal_alignment = 1

[node name="small" type="CheckBox" parent="fontCheckGroup"]
offset_left = 1030.5
offset_top = 531.5
offset_right = 1062.5
offset_bottom = 555.5
scale = Vector2(1.07, 1.07)

[node name="Label" type="Label" parent="fontCheckGroup/small"]
layout_mode = 0
offset_left = -21.0
offset_top = 24.0
offset_right = 47.0
offset_bottom = 49.0
scale = Vector2(1.07, 1.07)
theme = SubResource("Theme_lyspy")
text = "Small"
horizontal_alignment = 1

[node name="large" type="CheckBox" parent="fontCheckGroup"]
offset_left = 1206.5
offset_top = 532.5
offset_right = 1250.5
offset_bottom = 556.5
scale = Vector2(1.07, 1.07)

[node name="Label" type="Label" parent="fontCheckGroup/large"]
layout_mode = 0
offset_left = -21.0
offset_top = 24.0
offset_right = 47.0
offset_bottom = 49.0
scale = Vector2(1.07, 1.07)
theme = SubResource("Theme_lyspy")
text = "Large"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 628.5
offset_top = 327.5
offset_right = 1285.5
offset_bottom = 614.5
scale = Vector2(1.07, 1.07)
mouse_filter = 2
color = Color(0, 0, 0, 0.20392157)
